@@ -2,7 +2,7 @@
  OmegaT 2.1.3 update 1
 ----------------------------------------------------------------------
   2 Enhancements
-  2 Bugfixes
+  3 Bugfixes
 ----------------------------------------------------------------------
 2.1.3 update 1 vs. 2.1.3
 
@@ -21,6 +21,8 @@
   - Windows only: OS allowed to rename a project directory while in use
   http://sourceforge.net/support/tracker.php?aid=1956239
 
+  - OpenXML options enabled only after restarting OmegaT
+  http://sourceforge.net/support/tracker.php?aid=2959514
 
 ----------------------------------------------------------------------
  OmegaT 2.1.3 
